@@ -50,7 +50,7 @@ aac_packetizer_c::~aac_packetizer_c() {
 }
 
 unsigned char *
-aac_packetizer_c::get_aac_packet(aac_header_t *aacheader) {
+aac_packetizer_c::get_aac_packet(aac_header_c *aacheader) {
   unsigned char *packet_buffer = m_byte_buffer.get_buffer();
   int size                     = m_byte_buffer.get_size();
   int pos                      = find_aac_header(packet_buffer, size, aacheader, m_emphasis_present);
@@ -179,7 +179,7 @@ aac_packetizer_c::process(packet_cptr packet) {
     return process_headerless(packet);
 
   unsigned char *aac_packet;
-  aac_header_t aacheader;
+  aac_header_c aacheader;
 
   m_byte_buffer.add(packet->data->get_buffer(), packet->data->get_size());
   while ((aac_packet = get_aac_packet(&aacheader))) {
