@@ -1,3 +1,11 @@
+2013-04-13  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mkvmerge: bug fix: The parsing of the AAC AudioSpecificConfig
+        structure (the bytes contained in Matroska's CodecPrivate and in
+        MP4's "ESDS" atom) was fixed to support parsing the
+        GASpecificConfig and the ProgramConfigElement if the channel
+        configuration is 0. Fixes #872.
+
 2013-04-09  Moritz Bunkus  <moritz@bunkus.org>
 
         * mmg: bug fix: Loading chapters from Matroska files will open the
